<resources>
    <string name="app_name">GPS-Map-Painting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_view_friends">View Friends</string>
    <string name="menu_spend">Spend Coins</string>
    <string name="menu_share">Share App</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_shop">Spend Coins</string>
    <string name="menu_health">Health</string>

</resources>