<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/menu_view_friends" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_shop"
            android:title="@string/menu_spend" />
        <item
            android:id="@+id/nav_shareapp"
            android:icon="?attr/actionModeShareDrawable"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_health"
            android:title="@string/menu_health" />
    </group>
</menu>