<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gps_map_painting.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_view"
        android:name="com.example.gps_map_painting.ui.viewfriends.ViewFriendsFragment"
        android:label="@string/menu_view_friends"
        tools:layout="@layout/fragment_view_friends" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.gps_map_painting.ui.shop.ShopFragment"
        android:label="@string/menu_spend"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/nav_shareapp"
        android:name="com.example.gps_map_painting.ui.shareapp.ShareAppFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share_app" />
    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.gps_map_painting.ui.health.HealthFragment"
        android:label="@string/menu_health"
        tools:layout="@layout/fragment_health" />
</navigation>